kubernetes/vader/applications/user-apps/mealie/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-ingressroute
  namespace: user-apps

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mealie.feldman.in`)
      kind: Rule
      services:
        - name: mealie-service
          port: 80
  tls:
    secretName: mealie-feldman-in-tls
